MODORDERS-905 persist rollover failures per poLine (#771)
* MODORDERS-905 persist rollover failures per poLine

* MODORDERS-905
# added index.
# formatting

* MODORDERS-905 fixed comments